# statistic-modeling

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  justfile  pyproject.toml  tutorial.ipynb
configs/: README.md  govcn_xxgk_all_query_batches.csv  govcn_xxgk_query_batches.csv  govcn_xxgk_sources.toml  manual_srdi_jurisdiction_overrides_v1.csv  manual_srdi_jurisdiction_overrides_v2.csv  manual_srdi_label_rule_keywords_v1.csv
data/: .gitignore  README.md  source-manifest.csv
docs/: README.md  data-dictionary.md  govcn-xxgk-crawler.md  govcn-xxgk-dev-notes.md  label-intensity-construct-plan.md  manual-srdi-paper-draft-notes.md  manual-srdi-policy-mining-notes.md  research-design-and-variable-description.md  source-manifest-guide.md
notebooks/: 00-parquet-discover.py  00_parquet_discover.ipynb  01-xlsx-discover.ipynb  01_xlsx_discover.py  10_manual_collection_process.ipynb  10_manual_collection_process.py  20_central_gov_xxgk_explore.ipynb  20_central_gov_xxgk_explore.py  20a_decision.ipynb  20a_decision.py  30_central_gov_xxgk_corpus_qa.ipynb  30_central_gov_xxgk_corpus_qa.py  40_manual_srdi_text_mining.ipynb  40_manual_srdi_text_mining.py  41_manual_srdi_descriptive_analysis.ipynb  41_manual_srdi_descriptive_analysis.py  42_manual_srdi_fulltext_text_mining.ipynb  42_manual_srdi_fulltext_text_mining.py  42b_manual_srdi_fulltext_text_mining_v2.ipynb  42b_manual_srdi_fulltext_text_mining_v2.py  43_manual_srdi_text_measure_comparison.ipynb  43_manual_srdi_text_measure_comparison.py  44_manual_srdi_fulltext_descriptive_analysis.ipynb  (+32 more)
(+39 files in other folders)
