[project]
name = "statistic-modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gzh", email = "elecdot5@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
statistic-modeling = "statistic_modeling:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupytext>=1.19.1",
    "nbdime>=4.0.4",
    "nbstripout>=0.9.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.jupytext]
formats = "ipynb,py:percent"

[tool.ruff]
extend-exclude = ["notebooks/*.py"]
